--- a/march-jenkins-1.1
+++ b/march-jenkins-1.1
@@ -2,7 +2,7 @@ pipeline {
     agent any
     parameters{
         choice(name: 'VERSION', choices: ['1.0', '1.1', '1.2'])
-        booleanparam(name: 'Run', defaultvalue: true)
+        booleanParam(name: 'Run', defaultvalue: true)
     }
     stages {
         stage('Clone Application Code') {
