--- a/march-jenkins-1.1
+++ b/march-jenkins-1.1
@@ -20,6 +20,11 @@ pipeline {
                 sh 'mvn package -f pom.xml'
             }
         }
+        stage('Build') {
+            steps {
+                sh 'nexusArtifactUploader credentialsId: 'nexuskey', groupId: 'project', nexusUrl: '3.143.1.39:8081\\nexus', nexusVersion: 'nexus2', protocol: 'http', repository: 'releases', version: '2.3''
+            }
+        }
         stage('Deploy') {
             steps {
                 echo 'Deploy Application Code'
