--- a/march-jenkins-1.1
+++ b/march-jenkins-1.1
@@ -20,9 +20,9 @@ pipeline {
                 sh 'mvn package -f pom.xml'
             }
         }
-        stage('Build') {
+        stage('Upload Artifact to Nexus') {
             steps {
-                sh 'nexusArtifactUploader credentialsId: 'nexuskey', groupId: 'project', nexusUrl: '3.143.1.39:8081\\nexus', nexusVersion: 'nexus2', protocol: 'http', repository: 'releases', version: '2.3''
+                nexusArtifactUploader artifacts: [[artifactId: 'web', classifier: '', file: 'target/web.war', type: 'war']], credentialsId: 'nexuskey', groupId: 'project', nexusUrl: '3.143.1.39:8081\\nexus', nexusVersion: 'nexus2', protocol: 'http', repository: 'releases', version: '2.3'
             }
         }
         stage('Deploy') {
